[gd_scene load_steps=6 format=3 uid="uid://dibdmjcs27m0g"]

[ext_resource type="Script" uid="uid://qk3i5b0j3xmh" path="res://power.gd" id="1_1btnt"]
[ext_resource type="Texture2D" uid="uid://bvyftpbyg5unl" path="res://levels/Tilesets/lever_on.png" id="2_1btnt"]
[ext_resource type="Shader" uid="uid://brlvkteghwcwc" path="res://global elements/glow.gdshader" id="3_7uavd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_soi7j"]
radius = 32.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_soi7j"]
shader = ExtResource("3_7uavd")
shader_parameter/BLOOM_THRESHOLD = 0.65
shader_parameter/BLOOM_INTENSITY = 5.0
shader_parameter/OPACITY = 1.0
shader_parameter/BLUR_ITERATIONS = 6
shader_parameter/BLUR_SIZE = 0.015
shader_parameter/BLUR_SUBDIVISIONS = 32

[node name="Lever" type="Node2D"]
script = ExtResource("1_1btnt")
metadata/_custom_type_script = "uid://cggxrmqeulsxp"

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
visible = false
shape = SubResource("CircleShape2D_soi7j")

[node name="lever" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_soi7j")
texture = ExtResource("2_1btnt")
hframes = 2
frame = 1

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
